# WatsonPlots

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
examples/: demo.py
examples/data/: drone_route.csv  flight1.csv  flight2.csv  jetson.csv
examples/output/: 01_height.html  02_voltage.html  03_current.html  04_scatter.html  report.html
tests/: conftest.py  test_chart.py  test_distribution.py  test_line.py  test_pdf.py  test_report.py  test_scatter.py  test_sync.py  test_themes.py
watsonplots/: __init__.py  chart.py  consts.py  defaults.py  exceptions.py  html.py  layout.py  pdf.py  report.py  sync.py  text.py  themes.py  utils.py
watsonplots/charts/: __init__.py  area.py  distribution.py  graphs_3d.py  line.py  route.py  scatter.py
