[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "watsonplots"
version = "0.1.0"
description = "Easy, high-quality interactive plots powered by Plotly"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Watson" }]
keywords = ["plotting", "visualization", "plotly", "pandas", "charts"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "plotly>=5.0",
    "pandas>=2.0",
]

[project.optional-dependencies]
pdf = [
    "kaleido>=0.2",
    "pypdf>=4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pre-commit>=4.0",
    "black>=24.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "pylint>=3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["watsonplots"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

[tool.pylint.format]
max-line-length = 100

[tool.pylint.messages_control]
disable = [
    "missing-module-docstring",
    "too-many-arguments",
    "too-many-locals",
    "too-few-public-methods",
    "unnecessary-lambda",
]
